--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.3",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "react": "^19.0.0",
