--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.24.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.508.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
